@@ -254,3 +254,19 @@ Genrose5    0.184611 0.186500           1.0102      -1.02317
 Genrose20   0.898667 0.909056           1.0116      -1.15603
 Genrose50   2.523167 2.603778           1.0319      -3.19484
 MEANS       0.564717 0.577228           1.0222      -2.21547
+
+
+# At  2010-10-16 18:07:26.014139
+# SVN  2327M 
+             DEoptim   RcppDE ratioRcppToBasic pctGainOfRcpp
+Rastrigin2  0.040556 0.041333           1.0192      -1.91781
+Rastrigin5  0.105278 0.108500           1.0306      -3.06069
+Rastrigin20 0.538611 0.549111           1.0195      -1.94946
+Wild2       0.066611 0.067722           1.0167      -1.66806
+Wild5       0.180556 0.184944           1.0243      -2.43077
+Wild20      1.035056 1.051333           1.0157      -1.57265
+Genrose2    0.070889 0.071333           1.0063      -0.62696
+Genrose5    0.185444 0.186833           1.0075      -0.74895
+Genrose20   0.900778 0.897722           0.9966       0.33921
+Genrose50   2.522278 2.598667           1.0303      -3.02857
+MEANS       0.564606 0.575750           1.0197      -1.97385
