@@ -1,3 +1,10 @@
+2010-10-16  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/de4_0.cpp: converted to Armadillo use throughout
+
+	* R/DEoptim.R: changed to send and receive matrices rather than
+	  vectors that need to be recast to matrix
+
 2010-10-15  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/de4_0.cpp (permute): temp. urn vector now allocated above and passed
